# fenriz

./: .clang-format  CMakeLists.txt  Makefile  README.md  fenriz-portals.conf  fenriz.conf.example  fenriz.desktop  fenriz.desktop.in
docs/: IPC.md  PROTOCOLS.md  USER_GUIDE.md
protocols/: wlr-output-power-management-unstable-v1.xml
scripts/: release.sh
src/: config.cpp  config.hpp  cursor.cpp  cursor.hpp  decoration.cpp  decoration.hpp  ipc.cpp  ipc.hpp  keyboard.cpp  keyboard.hpp  layer.cpp  layer.hpp  lock.cpp  lock.hpp  main.cpp  output.cpp  output.hpp  output_policy.cpp  renderer.cpp  renderer.hpp  server.cpp  server.hpp  test_config.cpp  test_keybind.cpp  test_output.cpp  test_tiling.cpp  tiling.cpp  tiling.hpp  view.cpp  view.hpp  wlr.hpp  xwayland.cpp  xwayland.hpp
